objects/Field_TAM_Team__c/Field_TAM_Team__c.object-meta.xml
<CustomObject>
    <label>Field TAM Team</label>
    <nameField>
        <label>Field TAM Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field TAM Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>