objects/Field_TAM_Team__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field TAM Teams</relationshipLabel>
    <relationshipName>Field_TAM_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>