objects/Field_TAM_Team__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Field used by TAM RVPs/AVPs to document reasoning / justification for increasing or decreasing percentage values.</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>