objects/Field_TAM_Team__c/fields/Pod__c.field-meta.xml
<CustomField>
    <fullName>Pod__c</fullName>
    <label>Pod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia North</fullName>
            </value>
            <value>
                <fullName>Asia South</fullName>
            </value>
            <value>
                <fullName>EMEA Dach</fullName>
            </value>
            <value>
                <fullName>EMEA North</fullName>
            </value>
            <value>
                <fullName>EMEA South</fullName>
            </value>
            <value>
                <fullName>US Central</fullName>
            </value>
            <value>
                <fullName>US East</fullName>
            </value>
            <value>
                <fullName>US Federal</fullName>
                <label>US PubSec</label>
            </value>
            <value>
                <fullName>US Northeast</fullName>
            </value>
            <value>
                <fullName>US Southeast</fullName>
            </value>
            <value>
                <fullName>US West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>