objects/Field_TAM_Team__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <description>Field used by TAM RVPs/AVPs to document last date/time resource planning was performed</description>
    <label>Last Reviewed</label>
    <type>DateTime</type>
</CustomField>