objects/Field_TAM_Team__c/fields/Tertiary__c.field-meta.xml
<CustomField>
    <fullName>Tertiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Email</field>
            <operation>contains</operation>
            <value>tanium.com</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_TAM_Teams2</relationshipName>
    <type>Lookup</type>
</CustomField>