objects/Field_TAM_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Primary__c</columns>
    <columns>Secondary__c</columns>
    <columns>Tertiary__c</columns>
    <columns>Pod__c</columns>
    <columns>Percentage__c</columns>
    <columns>Sponsor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>